--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://denisecodes.github.io/CFG-Javascript-Group-Project",
+  "homepage": "https://denisecodes.github.io/CFG-Javascript-Group-Project",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
