--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://denisecodes.github.io/CFG-Javascript-Group-Project",
-  "name": "my-app",
+  "name": "jerk-shack-restaurant",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
